# glimpse-wiener-beta

./: CMakeLists.txt  README.md  about_this_version  nicaea.patch
cmake/Modules/: FindNFFT.cmake
data/mice/: Ncov.npy  cosmosis_mice_power_spectrum1d.npy  output.txt
data/mice/fits_files/: config2d.ini  kappa_mice_fast_glimpse_0.fits
data/mice/sv_patches/: e1_noisy_030419_0.npy  e2_noisy_030419_0.npy  kappa_true_030419_0.npy
ntbk/.ipynb_checkpoints/: DES_SV_power_kostas-checkpoint.ipynb  KS_dec2_forth2-checkpoint.ipynb  cat_DES_SV_zmean_final-checkpoint.ipynb  cfis_ludo_wglimpse-checkpoint.ipynb  cfis_wglimpse-checkpoint.ipynb  check_noise_covariance-checkpoint.ipynb  check_python_c_wiener_working_test_successful-checkpoint.ipynb  check_wiener_filtering-checkpoint.ipynb  comp_noise_covariance_DES_mockdata-checkpoint.ipynb  example_cat_glimpse-checkpoint.ipynb  flagship_cat_2deg_not_working-checkpoint.ipynb  glimpse_wienerI-checkpoint.ipynb  glimpse_wienerI_dec2_forth2-checkpoint.ipynb  glimpse_wienerI_dec2_forth2_2389_mice-checkpoint.ipynb  glimpse_wienerI_dec2_forth2_2389_mice_check_kappa_fits_for_niall-checkpoint.ipynb  glimpse_wienerI_forth2-checkpoint.ipynb  glimpse_wienerI_forth2_kaiser_squires-checkpoint.ipynb  glimpse_wienerI_noisy-checkpoint.ipynb  illustrate_mice_2389_catalogue_no_mask_dec2_forth2_good_old-checkpoint.ipynb  lensing angular power spectrum-checkpoint.ipynb  map_to_wiener-checkpoint.ipynb  mice_wglimpse_example-checkpoint.ipynb  no_mask_dec2_forth2-checkpoint.ipynb  proximal_wiener_filtering_flagship-checkpoint.ipynb  proximal_wiener_filtering_toy_example_validated-Copy1-checkpoint.ipynb  proximal_wiener_filtering_toy_not_working-checkpoint.ipynb  shear_to_kappa_transform-checkpoint.ipynb  starlet_2d_transform -checkpoint.ipynb  toy_dataset_wglimpse-checkpoint.ipynb  view_data_glimpse_wienerI-eusipco-checkpoint.ipynb  wglimpse_DES_journal_experiments-checkpoint.ipynb  wglimpse_MICE_journal_experiments-checkpoint.ipynb  wiener_filtering_mice2389_masked-checkpoint.ipynb  wiener_filtering_mice2389_masked_proximal-checkpoint.ipynb  wiener_filtering_mice2389_nomask_dec2-checkpoint.ipynb
src/: density_reconstruction.cpp  density_reconstruction.h  field.cpp  field.h  field_bad_probably.cpp  field_good_before_lensing.cpp  field_original.cpp  field_working_copy_operators_checked_python.cpp  glimpse.cpp  gpu_utils.c  gpu_utils.h  redshift_distribution.cpp  redshift_distribution.h  spg.cpp  spg.cu  spg.cuh  spg.h  starlet_2d.cpp  starlet_2d.h  starlet_2d_orig_beforegen2_transform.cpp  surface_reconstruction.cpp  surface_reconstruction.h  survey.cpp  survey.h  version.h  version.h.in  wavelet_transform.cpp  wavelet_transform.h  wavelet_transform_orig_beforegen2_transform.cpp  wavelet_transform_orig_beforegen2_transform.h  wiener_filtering.cpp  wiener_filtering.h  wiener_filtering_before_binning_in_field.cpp  wiener_filtering_binning_in_field_working_fine.cpp
test/: test_redshift_distribution.cpp
utils/: convert_data_file.py
